--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -13,6 +14,7 @@
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "@types/query-string": "^6.3.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
